# cursach

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  exception_handlers.py  main.py  pyproject.toml
ai/: contracts.py  (+2 more)
backend/: .env.example  .env.test.example  Makefile  docker-compose.test.yml  docker-compose.yml  exception_handlers.py  main.py  pyproject.toml
backend/ai/: contracts.py  deepseek.py
backend/ai/factories/: test_generation_factory.py
backend/cli/: main.py
backend/cli/bootstrap/: seed_service.py
backend/core/: cache.py  config.py  dto.py  enums.py  exceptions.py  logging.py
backend/core/auth/: __init__.py  guards.py
backend/core/di/: container.py
backend/handlers/: admin.py  courses.py
backend/migration/: env.py
backend/migration/versions/: fcd637805f06_baseline.py
backend/models/: __init__.py  course.py  refresh_token.py  test.py  user.py
backend/repositories/: course.py  course_progress.py  question_attempt.py  refresh_token.py  subtopic_progress.py  test.py  user.py
backend/schemas/: auth.py  course.py  refresh_token.py  test.py  user.py  validation.py
backend/seed/: 001.roles.json  002.admin.json
backend/services/admin/: __init__.py
backend/services/auth/: auth.py
backend/services/cookie/: __init__.py  cookie.py
backend/services/course/: __init__.py  course.py  course_access.py  course_creation.py  course_detail.py  course_support.py
backend/services/security/: __init__.py
backend/tests/: app.py  conftest.py  settings.py
(+181 files in other folders)
